reduced re-render

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,10 @@
     "Abdelkader",
     "CLOUDINARY",
     "clsx",
+    "itemwidth",
+    "lngs",
     "PEXELS",
-    "Riazi"
+    "Riazi",
+    "signup"
   ]
 }
