add location model and filter by location

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,20 @@
     "Abdelkader",
     "CLOUDINARY",
     "clsx",
+    "geodb",
     "heroicons",
+    "isbot",
     "itemwidth",
+    "languagedetector",
     "lngs",
     "PEXELS",
+    "Pipeable",
+    "propertyforsale",
+    "propertyrentals",
     "Riazi",
-    "signup"
+    "signup",
+    "tailwindcss",
+    "témouchent",
+    "typecheck"
   ]
 }
