--- a/backend/package.json
+++ b/backend/package.json
@@ -21,10 +21,13 @@
     "bcryptjs": "^2.4.3",
     "cloudinary": "^1.33.0",
     "cross-fetch": "^3.1.5",
+    "currency.js": "^2.0.4",
     "express": "^4.18.2",
+    "geodb-cities": "^0.1.0",
     "graphql-subscriptions": "^2.0.0",
     "graphql-ws": "^5.11.2",
     "jsonwebtoken": "^9.0.0",
+    "money": "^0.2.0",
     "ws": "^8.11.0"
   },
   "devDependencies": {
