--- a/market-frontend/package.json
+++ b/market-frontend/package.json
@@ -18,6 +18,7 @@
     "@remix-run/node": "^1.9.0",
     "@remix-run/react": "^1.9.0",
     "@remix-run/serve": "^1.9.0",
+    "cloudinary": "^1.33.0",
     "clsx": "^1.2.1",
     "cross-fetch": "^3.1.5",
     "graphql": "^16.6.0",
@@ -34,6 +35,7 @@
     "react-i18next": "^11.18.6",
     "remix-i18next": "^4.1.1",
     "use-memo-one": "^1.1.3",
+    "uuid": "^9.0.0",
     "ws": "^8.11.0"
   },
   "devDependencies": {
