--- a/market-frontend/package.json
+++ b/market-frontend/package.json
@@ -33,6 +33,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^11.18.6",
+    "redux-saga": "^1.2.2",
     "remix-i18next": "^4.1.1",
     "use-memo-one": "^1.1.3",
     "uuid": "^9.0.0",
